@startuml
class Usuario {
    - String nome
    - String nome_usuario
}

class InformacaoPessoal {
    - String email
    - String telefone
    - String senha
    - Date data_nascimento
    + int calcular_idade()
}

class Postagem {
   - String texto
}

Usuario "1"-->"1" InformacaoPessoal
Usuario "1"*-- "0..*" Postagem

@enduml